syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.killxdcj.aiyawocao.metadata.service";

message DoesMetadataExistRequest {
  bytes infohash = 1;
}

message DoesMetadataExistResponse {
  bool exist = 1;
}

message PutMetadataRequest {
  bytes infohash = 1;
  bytes metadata = 2;
}

message PutMetadataResponse {
  bool result = 1;
}

message GetMetadataRequest {
  bytes infohash = 1;
}

message GetMetadataResponse {
  bytes metadata = 1;
}

message ParseMetadataRequest {
  bytes infohash = 1;
}

message ParseMetadataResponse {
  string metadataJson = 1;
}

service MetadataService {
  rpc doesMetadataExist (DoesMetadataExistRequest) returns (DoesMetadataExistResponse);
  rpc putMetadata (PutMetadataRequest) returns (PutMetadataResponse);
  rpc getMetadata (GetMetadataRequest) returns (GetMetadataResponse);
  rpc parseMetadata (ParseMetadataRequest) returns (ParseMetadataResponse);
}